src/test/ui/malformed/malformed-plugin-2.stderr
error: attribute must be of the form `#[plugin(...)]`
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"] //~ ERROR attribute must be of the form `#[plugin(...)]`
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

