src/test/ui/malformed/malformed-plugin-2.rs
#![feature(plugin)]
#![plugin="bleh"] //~ ERROR attribute must be of the form `#[plugin(...)]`

fn main() {}
